--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+* {
+    border: 1px solid black;
+}
 .container {
     background-color: #c00025;
     width: 100%;
     max-width: 550px;
     border-radius: 15px;
     border: 2px solid grey;
-    padding-bottom: 25px;
+    padding: 25px 25px 25px 25px;
 }
 .display {
     margin-top: 25px;
@@ -17,6 +20,46 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    padding-left: 8%;
     padding-right: 8%;
+    margin-bottom: 2%;
     font-size: 5.0rem;
+  }
+
+  
+
+  button {
+      border-radius: 100%;
+      color: #fff;
+      text-align: center;
+      font-size: 20px;
+  }
+
+  .appBtns {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+  }
+  .leftBtns {
+      width: 70%;
+  }
+
+  .rightBtns {
+      width: 30%;
+      display: flex;
+      justify-content: space-between;
+  }
+
+  .numButtons {
+      background-color: #194379;
+  }
+
+  .opButtons {
+      background-color: #247292;
+      display: flex;
+      flex-direction: column;
+  }
+
+  .specButtons {
+      background-color: #235d9d;
   }
