--- a/src/App.css
+++ b/src/App.css
@@ -32,22 +32,31 @@
       border-radius: 100%;
       color: #fff;
       text-align: center;
-      font-size: 20px;
+      font-size: 60px;
+      width: 100px;
+      height: 100px;
+      margin: 2%;
   }
 
   .appBtns {
       display: flex;
-      justify-content: space-between;
-      width: 100%;
+      flex-wrap: wrap;  
+
   }
   .leftBtns {
       width: 70%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      align-content: center;
   }
 
   .rightBtns {
-      width: 30%;
+      width: 20%;
       display: flex;
-      justify-content: space-between;
+      flex-flow: column wrap;
+      justify-content: center;
   }
 
   .numButtons {
@@ -58,8 +67,13 @@
       background-color: #247292;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 5%;
   }
 
   .specButtons {
       background-color: #235d9d;
   }
+
+  
