--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid black;
-}
+} */
 .container {
     background-color: #c00025;
     width: 100%;
@@ -69,7 +69,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 5%;
+      margin-bottom: 10%;
   }
 
   .specButtons {
